se comentan los includes de los comentarios durante actualizacion de django #138

--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -52,7 +52,7 @@
 		{% include 'ratings/rating_block.html' %}
 
 		{% block media_comments %}
-				{% include 'comments/comments_block.html' %}
+				{# include 'comments/comments_block.html'  #}
 		{% endblock %}
 
 	</div> <!--end media_detail -->
