--- a/cyclope/apps/polls/templates/polls/poll_detail.html
+++ b/cyclope/apps/polls/templates/polls/poll_detail.html
@@ -36,7 +36,7 @@
   <div class="clear"></div>
 
 <!--COMENTARIOS -->
-  {% include 'comments/comments_block.html' %}
+  {# include 'comments/comments_block.html'  #}
 
 </div> <!--termina poll_detail -->
 
