--- a/cyclope/templates/cyclope/base_content_detail.html
+++ b/cyclope/templates/cyclope/base_content_detail.html
@@ -31,7 +31,7 @@
   {% include 'cyclope/related_contents_block.html' %}
 
   <!-- comments -->
-  {% include 'comments/comments_block.html' %}
+  {# include 'comments/comments_block.html'  #}
 
 </div>
 {% endblock content%}
