--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -212,7 +212,7 @@
 <div class="clear"></div>
 
 <!--COMENTARIOS -->
-  {% include 'comments/comments_block.html' %}
+  {# include 'comments/comments_block.html'  #}
 
 
 
