--- a/cyclope/apps/feeds/templates/feeds/feed_detail.html
+++ b/cyclope/apps/feeds/templates/feeds/feed_detail.html
@@ -63,7 +63,7 @@
   <div class="clear"></div>
 
 <!--COMENTARIOS -->
-  {% include 'comments/comments_block.html' %}
+  {# include 'comments/comments_block.html'  #}
 
 </div> <!--termina feed_detail -->
 
