--- a/cyclope/apps/forum/templates/forum/topic_detail.html
+++ b/cyclope/apps/forum/templates/forum/topic_detail.html
@@ -19,7 +19,7 @@
     {{ topic.text|smart_style}}
   </span></div>
 
-  {% include 'comments/comments_block.html' %}
+  {# include 'comments/comments_block.html'  #}
 </div>
 
 {% endblock content%}
