--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -49,7 +49,7 @@
 
 		{% include 'cyclope/related_contents_block.html' %}
 
-		{% include 'ratings/rating_block.html' %}
+		{# include 'ratings/rating_block.html'  #}
 
 		{% block media_comments %}
 				{# include 'comments/comments_block.html'  #}
