--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail_bootstrap.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail_bootstrap.html
@@ -90,7 +90,7 @@
 
 	{% include 'cyclope/related_contents_block.html' %}
 
-	{% include 'ratings/rating_block.html' %}
+	{# include 'ratings/rating_block.html'  #}
 
 	{% block media_comments %}
 			{# include 'comments/comments_block.html'  #}
