tag adminmedia fue deprecado, se debe usar staticfiles https://docs.djangoproject.com/en/dev/releases/1.5/#miscellaneous

--- a/cyclope/templates/admin/base_site.html
+++ b/cyclope/templates/admin/base_site.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
-{% block extrastyle %}{% load adminmedia %}<link rel="icon" href="{{ CYCLOPE_STATIC_URL }}images/cyclope-icon.png" type="image/png">{% endblock %}
+{% block extrastyle %}<link rel="icon" href="{% static 'images/cyclope-icon.png' %}" type="image/png">{% endblock %}
 {% block title %}{{ title }} | {% trans 'Cyclope site admin' %}{% endblock %}
 
 {% block branding %}
