--- a/cyclope/core/collections/templates/admin/collections/categorization/change_list.html
+++ b/cyclope/core/collections/templates/admin/collections/categorization/change_list.html
@@ -1,5 +1,5 @@
 {% extends "admin/change_list.html" %}
-{% load adminmedia admin_list i18n cyclope_utils static %}
+{% load admin_list i18n cyclope_utils static %}
 {% load url from future %}
 
 {% block pretitle %}{% endblock %}
