--- a/cyclope/templates/admin/base_content_change_form.html
+++ b/cyclope/templates/admin/base_content_change_form.html
@@ -1,9 +1,9 @@
 {% extends "admin/change_form.html" %}
-{% load i18n admin_modify adminmedia staticfiles %}
+{% load i18n admin_modify staticfiles %}
 
 {% block extrastyle %}
 {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{ CYCLOPE_STATIC_URL }}css/tabbed_collections.css" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/tabbed_collections.css' %}" />
 {% endblock %}
 
 
