--- a/cyclope/templates/admin/change_list.html
+++ b/cyclope/templates/admin/change_list.html
@@ -1,5 +1,5 @@
 {% extends "admin/base_site.html" %}
-{% load adminmedia admin_list i18n cyclope_utils static %}
+{% load admin_list i18n cyclope_utils static %}
 {% load url from future %}
 
 {% block extrastyle %}
