--- a/cyclope/templates/filebrowser/index.html
+++ b/cyclope/templates/filebrowser/index.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 
 <!-- LOADING -->
-{% load i18n adminmedia admin_static fb_tags fb_pagination %}
+{% load i18n admin_static fb_tags fb_pagination %}
 
 <!-- STYLESHEETS -->
 {% block extrastyle %}
