Del AddThis and updated to bootstrap social sharing and follow

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -217,7 +217,10 @@
 <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
 
-
+<!--Share -->
+{% if CYCLOPE_SITE_SETTINGS.enable_share_buttons %}
+	{% include 'cyclope/sharing_content.html' %}
+{% endif %}
 
 
 </div> <!--termina article_detail -->
