--- a/cyclope/templates/cyclope/content_tools_block.html
+++ b/cyclope/templates/cyclope/content_tools_block.html
@@ -2,17 +2,17 @@
   {% get_comment_count for current_object as comment_count %}
 
   <div class="tools meta-content">
-    {% if CYCLOPE_SITE_SETTINGS.enable_share_buttons %}
-      {% block social_share %}
-      <div class="addthis_toolbox addthis_default_style"  style="float:left;">
-        <a class="addthis_button_facebook"></a>
-        <a class="addthis_button_twitter"></a>
-        <a class="addthis_button_compact"></a>
-      </div>
-      {% endblock %}
-    {% endif %}
-
     <ul class="list-inline">
+      {% if CYCLOPE_SITE_SETTINGS.enable_share_buttons %}
+        {% block social_share %}
+          <li>
+            <a class="share-link" title="Comparte en tus Redes Sociales" data-toggle="modal" data-target="#Share">
+              <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+              {% trans "Share" %}
+            </a>
+          </li>
+        {% endblock %}
+      {% endif %}
       <li>
           <a href="javascript:window.print()" class="print">
               <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
