--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_detail.html
@@ -1,4 +1,7 @@
 {% extends "medialibrary/medialibrary_base_detail.html" %}
 
 {% block media_content %}
+    <div class="teaser_icon_container media-content soundtrack-detail">
+        {% include 'medialibrary/media_player.html' %}
+    </div>
 {% endblock %}
