Solución estilo para videos y no romper layout #120

--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.css
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.css
@@ -176,9 +176,14 @@ span.category_title a {
   float: none;
 }
 .player video {
-  width: 480px;
-  height: 360px;
+    width: 480px;
+    height: 360px;
 }
+
+video {
+    max-width:100%;
+}
+
 .player object {
   width: 480px;
   height: 360px;
