--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.css
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.css
@@ -176,9 +176,14 @@ span.category_title a {
   float: none;
 }
 .player video {
-  width: 480px;
-  height: 360px;
+    width: 480px;
+    height: 360px;
 }
+
+video {
+    max-width:100%;
+}
+
 .player object {
   width: 480px;
   height: 360px;
@@ -570,12 +575,10 @@ footer,
 }
 /*estilos para rss*/
 #right .feed_teaser h2 {font-size:20px;}
-/* #right .feed_teaser p {font-size:18px;}*/
 #right .comments_length h3 {font-size:18px;}
 #right .feed h1  {font-size:24px; border-top: 1px solid #000; border-bottom: 1px solid #000; padding:8px;}
 
 #left .feed_teaser h2 {font-size:20px;}
-/*#left .feed_teaser p {font-size:18px;}*/
 #left .comments_length h3 {font-size:18px;}
 #left .feed h1  {font-size:24px; border-top: 1px solid #000; border-bottom: 1px solid #000; padding:8px;}
 
