botones redes sociales: channel por user en yt

--- a/cyclope/templates/cyclope/follow_social.html
+++ b/cyclope/templates/cyclope/follow_social.html
@@ -27,7 +27,7 @@
 			<a class="button_vimeo_follow" target="_blank" href="https://vimeo.com/{{username}}"><img class="follow {{ options.style }}" src="/static/themes/cyclope-bootstrap/images/social/vimeo.png" /></a>
 		{% endif %}
 		{% if service == "youtube" %}
-			<a class="button_youtube_follow" target="_blank" href="https://www.youtube.com/channel/{{username}}"><img class="follow {{ options.style }}" src="/static/themes/cyclope-bootstrap/images/social/youtube.png" /></a>
+			<a class="button_youtube_follow" target="_blank" href="https://www.youtube.com/user/{{username}}"><img class="follow {{ options.style }}" src="/static/themes/cyclope-bootstrap/images/social/youtube.png" /></a>
 		{% endif %}
 		{% if service == "gnusocial" %} 
 			<a class="button_gnusocial_follow" target="_blank" href="{{username}}"><img class="follow {{ options.style }}" src="/static/themes/cyclope-bootstrap/images/social/gnusocial.png" /></a>
