--- a/cyclope/templates/cyclope/sharing_content.html
+++ b/cyclope/templates/cyclope/sharing_content.html
@@ -15,7 +15,7 @@
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 					
 					<!-- Share in Facebook -->
-					<a title="{% trans 'Share in Facebook' %}" target="_blank" 
+					<a class="share_fachobook" title="{% trans 'Share in Facebook' %}" target="_blank" 
 					href="https://www.facebook.com/sharer/sharer.php?u={{ CYCLOPE_BASE_URL|urlencode }}{{ current_object.get_absolute_url|urlencode }}&amp;src=sdkpreparse"
 					onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes');return false;"><img class="img-share" title="{% trans 'Share in Facebook' %}" src="/static/themes/cyclope-bootstrap/images/social/facebook.png" /></a>
 
