eliminar duplicacion de setting para habilitar botones de seguir en redes sociales se deja en el view option que es donde tiene sentido poder mostrar redes y/o rss no se elimina en SiteSettings en esta version para evitar la migracion, queda por hacer con django 1.9 ver issue #163

--- a/cyclope/templates/cyclope/follow_social.html
+++ b/cyclope/templates/cyclope/follow_social.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="follow-social {% if region_name == 'header' %}header{% endif %}">
-  {% if CYCLOPE_SITE_SETTINGS.enable_follow_buttons and options.show_social_buttons %}
+  {% if options.show_social_buttons %}
 
   {% for service, username in CYCLOPE_SITE_SETTINGS.social_follow_services %}
     {% if username != "USERNAME" %}
