Revert "se comentan los includes de los comentarios durante actualizacion de django #138"
This reverts commit f5b32a7e17ed5c604fdb43751c45d6324948fee4.

Conflicts:
	cyclope/apps/articles/templates/articles/article_detail.html

--- a/cyclope/templates/comments/comments_list.html
+++ b/cyclope/templates/comments/comments_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="regionview customcomment list comments-list">
-  {# include 'comments/list.html'  #}
+  {% include 'comments/list.html' %}
 </div>
 {% endblock %}
 
