--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -213,7 +213,7 @@
 <div class="clear"></div>
 
 <!--COMENTARIOS -->
-{# % include 'comments/comments_block.html' % #}
+  {% include 'comments/comments_block.html' %}
 
 
 
