AUTH_PROFILE_MODULE y User.get_profile fueron deprecados en Django 1.7 https://docs.djangoproject.com/en/1.11/internals/deprecation/#deprecation-removed-in-1-7 se reemplaza por un OneToOneField llamado profile

--- a/cyclope/templates/registration/user_block.html
+++ b/cyclope/templates/registration/user_block.html
@@ -2,7 +2,7 @@
 
 <div id="user_status">
 {% if user.is_authenticated %}
-  {% with profile=user.get_profile %}
+  {% with profile=user.profile %}
     {% if profile %}
       <a href="{{ profile.get_absolute_url }}">{{ user.get_full_name|default:user.username }}</a>
     {% else %}
