fix target_view as a context param in templates not a fixed string

--- a/cyclope/core/collections/templates/collections/collection_categories_hierarchy_item.html
+++ b/cyclope/core/collections/templates/collections/collection_categories_hierarchy_item.html
@@ -1,4 +1,4 @@
 <span class="{{ has_children }}">
-  <a href="{% url 'target_view' slug %}">{{ name }}</a>
+  <a href="{% url target_view slug %}">{{ name }}</a>
 </span>
 
